# Assignment_4.1

./: .pyproject.toml.swn  Assignment_4.2.ipynb  Dockerfile  README.md  env.yml  nonstandardcode.py  pyproject.toml
