[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asign_4.1"
version = "0.0.1"
authors = [
  { name="Mayank", email="mayankraj.m@tigeranalytics.com" },
]
description = "Assignment_4.1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

